maze.lessons.maze.pledge.PledgeMaze.scala.error
Escaper:36: error: reassignment to val
  setDirection=dir
              ^Escaper:38: error: reassignment to val
  setDirection=ancienneDir
              ^